syntax = "proto3";

package shoppingcart;

// Events published to external services


message ItemQuantityAdjusted {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message CheckedOut {
    string cartId = 1;
}
